# libxslt

./: .gitignore  CMakeLists.txt
cmake/: FindGCrypt.cmake  config.in.h  environmentchecks.cmake  packaging.cmake  padstring.cmake  systemidentification.cmake
distrib/: description.txt
distrib/osx/: welcome.txt
libexslt/: CMakeLists.txt  common.c  crypto.c  date.c  dynamic.c  functions.c  libexslt.h  math.c  saxon.c  sets.c  strings.c
libxslt/: CMakeLists.txt  libxslt.h
xsltproc/: CMakeLists.txt
